syntax = "proto3";

package pb;

import "google/api/annotations.proto";
option go_package = "grpc_anotation_sample/pb";

message Post {
  string id = 1;
  string name = 2;
  string desc = 3;
  int32 age = 4;
}

message CreatePostRequest { Post data = 1; }
message CreatePostResponse { Post data = 1; }
message GetPostRequest { string id = 1; }
message GetPostResponse { Post data = 1; }
message UpdatePostRequest { Post data = 1; }
message UpdatePostResponse { Post data = 1; }
message DeletePostRequest { string id = 1; }
message DeletePostResponse { bool success = 1; }
message ListPostsRequest {}
message ListPostsResponse { repeated Post data = 1; }

service PostService {
  rpc CreatePost(CreatePostRequest) returns (CreatePostResponse) {
    option (google.api.http) = { post: "/v1/posts" body: "*" };
  }
  rpc GetPost(GetPostRequest) returns (GetPostResponse) {
    option (google.api.http) = { get: "/v1/posts/{id}" };
  }
  rpc UpdatePost(UpdatePostRequest) returns (UpdatePostResponse) {
    option (google.api.http) = { put: "/v1/posts/{data.id}" body: "*" };
  }
  rpc DeletePost(DeletePostRequest) returns (DeletePostResponse) {
    option (google.api.http) = { delete: "/v1/posts/{id}" };
  }
  rpc ListPosts(ListPostsRequest) returns (ListPostsResponse) {
    option (google.api.http) = { get: "/v1/posts" };
  }
}

